# panjaya-video-task

./: .gitignore  .lintstagedrc  .mcp.json  .nxignore  .prettierignore  CHANGELOG.md  README.md  about.js  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
apps/server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  alembic.ini  project.json  pyproject.toml
apps/server/docker/: docker-compose.test.yml  docker-compose.yml
apps/server/envs/: .env.example  .env.local  .env.test
apps/server/tests/: conftest.py
apps/server/tests/integration/: test_assets.py  test_auth.py  test_events.py
apps/server/tests/unit/modules/assets/: test_assets_service.py  test_create_asset.py  test_delete_asset.py  test_get_asset.py
apps/server/tests/unit/modules/auth/: test_login.py  test_logout.py  test_refresh.py  test_signup.py
apps/server/video_audio_server/: app_router.py  main.py  worker.py
apps/server/video_audio_server/core/: config.py  security.py
apps/server/video_audio_server/core/constants/: env_constants.py  idempotency_constants.py
apps/server/video_audio_server/core/db/: all_models.py  session.py
apps/server/video_audio_server/core/decorators/: skip_idempotency.py  version_decorator.py
apps/server/video_audio_server/core/middlewares/: api_version_middleware.py  idempotency_middleware.py  request_size_middleware.py  server_header_middleware.py
apps/server/video_audio_server/core/models/: app_models.py  error_models.py
apps/server/video_audio_server/core/services/: cache_service.py  idempotency_service.py  sse_service.py
apps/server/video_audio_server/core/storage/: presign_service.py  storage_client.py
apps/server/video_audio_server/modules/assets/: assets_controller.py  assets_events_controller.py  assets_webhooks_controller.py
apps/server/video_audio_server/modules/auth/: auth_controller.py
apps/server/video_audio_server/modules/users/: users_controller.py
apps/server/video_audio_server/shared/dependencies/: arq.py  auth.py  db.py  redis.py  repositories.py  services.py  storage.py  worker_auth.py
apps/server/video_audio_server/shared/dtos/: paginated_response_dto.py  s3_event_dto.py
apps/server/video_audio_server/shared/repositories/: crud_repository.py
apps/server/video_audio_server/shared/utils/: partial.py
(+345 files in other folders)
